fix - codeblock copy button overflow

--- a/scss/components/_prism.scss
+++ b/scss/components/_prism.scss
@@ -20,15 +20,11 @@ pre.code-toolbar {
   }
   .toolbar,
   .toolbar-item {
-    height: 100%;
+    height: 99.9%;
   }
   .toolbar a {
-    color: #bbb;
-    font-size: .8em;
-    padding: 0 .5em;
     background-color: rgba(21, 16, 48, 1);
     transition: background-color 0.3s ease-in-out;
-    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
     border-radius: 0;
     height: 100%;
     display: flex;
